fix the navbar on mobile

--- a/src/main.scss
+++ b/src/main.scss
@@ -167,6 +167,7 @@ a {
     body {
         margin-left: 0;
         margin-right: 0;
+        margin-top: 0;
     }
     .client-main-frame > .post {
         border-radius: 0;
